<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_evaluation_tv_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/item_evaluation_tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_evaluation_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_evaluation_tv_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_evaluation_weight"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_evaluation_tv_imc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="TextView"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>